--- a/pois_reg_sarah.qmd
+++ b/pois_reg_sarah.qmd
@@ -13,21 +13,12 @@ U <- function(beta, x, y) {
   #initialize lambda, score, sample size
   l <- exp(beta[1] + beta[2]*x)
   score <- rep(0, times = 2)
-  n <- length(x)
   
   #fill first element of score
-  sum <- 0
-  for(i in 1:n){
-    sum <- sum + (y[i] - l[i])  
-  }
-  score[1] <- sum
+  score[1] <- sum(y - l)
   
   #fill second element of score
-  sum <- 0
-  for(i in 1:n){
-    sum <- sum + (x[i] * (y[i] - l[i])) 
-  }
-  score[2] <- sum
+  score[2] <- sum(x * (y - l))
   
   #return score
   score
@@ -39,29 +30,15 @@ info <- function(beta, x, y) {
   #initialize Hessian, lambda, sample size
   Hessian <- matrix(data = c(0,0,0,0), nrow = 2, ncol = 2)
   l <- exp(beta[1] + beta[2]*x)
-  n <- length(x)
   
   #fill top left entry in Hessian
-  sum <- 0
-  for(i in 1:n){
-    sum = sum + l[i]
-  }
-  Hessian[1,1] <- -1 * sum
+  Hessian[1,1] <- - sum(l)
   
   #fill mixed entries in Hessian
-  sum <- 0
-  for(i in 1:n){
-    sum = sum + x[i]*l[i]
-  }
-  Hessian[1,2] <- -1 * sum
-  Hessian[2,1] <- -1 * sum
+  Hessian[1,2] <- Hessian[2,1] <- - sum(x * l)
   
   #fill in bottom right entry in Hessian
-  sum <- 0
-  for(i in 1:n){
-    sum = sum + (x[i] * x[i] * l[i])
-  }
-  Hessian[2,2] <- -1 * sum
+  Hessian[2,2] <- - sum(x ^ 2 * l)
   
   #return Hessian
   Hessian
@@ -69,22 +46,30 @@ info <- function(beta, x, y) {
 ```
 
 ```{r}
-find_beta <- function(start_guess, x, y, verbose = FALSE) {
+find_beta <- function(start_guess, x, y, maxtol = 1E-4, maxiter = 1E3, verbose = FALSE) {
   beta_curr <- start_guess
   diff <- 1
   iterations <- 0
-  while(diff > 0.0001){
+  while(diff > maxtol & iterations <= maxiter){
     beta_next <- beta_curr - solve(info(beta_curr, x, y)) %*% U(beta_curr, x, y)
     diff <- max(abs(beta_next[1] - beta_curr[1]), abs(beta_next[2] - beta_curr[2]))
     iterations <- iterations + 1
     beta_curr <- beta_next
     if (verbose) {
-      print(cat("beta_next:", beta_next))
-      print(cat("diff:", diff))
-      print(cat("iterations:", iterations))
+      print(paste("beta_next:", beta_next))
+      print(paste("diff:", diff))
+      print(paste("iterations:", iterations))
     }
   }
-  beta_curr
+  
+  if (diff > maxtol & iterations >= maxiter) {
+    conv_msg = "Hit maxiter without convergence."
+  } else {
+    conv_msg = "Yay! We converged."
+  }
+  
+  return(list(estimates = beta_curr, 
+              convergence = conv_msg))
 }
 ```
 
@@ -111,7 +96,7 @@ lambda = exp(b0 + b1*x)
 y = rpois(100, lambda = lambda) 
 
 set.seed(1031) ## happy birthday!
-find_beta(c(0, 0), x, y) #problem
+find_beta(c(0, 0), x, y)
 
 summary(glm(y ~ x, family = "poisson")) #did not converge, maybe that's why?
 ```
