--- a/pois_reg.qmd
+++ b/pois_reg.qmd
@@ -5,9 +5,6 @@ format: html
 
 TO DO: update information, update find_beta, extend sim
 
-The clean versions of the score vector and Fisher information do not exist, as we derive them by component.
-
-
 
 U(beta = c(0.5, 0.25, 0.1), 
   Y = "y", 
@@ -21,10 +18,15 @@ U <- function(beta, X, Y, Z = NULL, data) {
   
   #turn inputs into matrices
   beta <- matrix(data = beta, ncol = 1)
-  data <-  data.matrix(frame = data) #includes X,Z, and potentially other covars
+  data <- data.matrix(frame = data) #holds X, Z, and other potential covariates
   
   #initialize lambda, score
-  l <- exp(beta[1] + data[, c(X, Z)] %*% beta[-1]) ## dimension n x 1
+  if(is.null(Z)){
+    l <- exp(beta[1] + beta[2] * X) 
+  }
+  else {
+    l <- exp(beta[1] + data[, c(X, Z)] %*% beta[-1]) ## dimension n x 1
+  }
   score <- matrix(data = 0, 
                   nrow = nrow(beta)) ## dimension p x 1 (where p = dim(beta))
   
@@ -34,14 +36,14 @@ U <- function(beta, X, Y, Z = NULL, data) {
   #fill first element of score
   score[1] <- sum(yml)
     
-  # save a transformed version of Y - lambda
+  #save column copies of Y - lambda in a matrix
   ## same column, replicated once for each covariate in (X, Z)
-  yml_wide = matrix(data = yml, 
+  yml_wide <- matrix(data = yml, 
                         nrow = length(yml),
                         ncol = length(c(X, Z)), 
                         byrow = FALSE) ## dimension n x (p - 1)
   
-  #fill remaining elements of score
+  #fill remaining elements of score (clever way)
   score[-1] <- colSums(data[, c(X, Z)] * yml_wide)
   
   #return score
@@ -49,29 +51,41 @@ U <- function(beta, X, Y, Z = NULL, data) {
 }
 
 #Fisher information
-info <- function(beta, x, y) {
-  
-  #initialize matrix, lambda
-  I <- matrix(data = c(0,0,0,0), nrow = 2, ncol = 2)
-  l <- exp(beta[1] + beta[2]*x)
+info <- function(beta, X, Z = NULL, data) {
 
+  #turn inputs into matrices
+  beta <- matrix(data = beta, ncol = 1)
+  data <- data.matrix(frame = data) #holds X, Z, and other potential covariates
   
-  #fill top left entry in matrix
-  I[1,1] <- -1 * sum(l)
+  #initialize lambda
+  if(is.null(Z)) {
+    l <- exp(beta[1] + beta[2] * X)  
+  }
+  else {
+    l <- exp(beta[1] + data[, c(X,Z)] %>% beta[-1]) #dim n x 1
+  }
+  #cat("lambda", round(l, 1), "\n")
+
+  #initialize design matrix
+  n <- nrow(data)
+  intercept <- rep(1, times = n)
+  dm <- cbind(intercept, data)
+  #cat("dim dm = ", dim(dm), "\n")
   
-  #fill mixed entries in matrix
-  I[1,2] <- I[2,1] <- -1 * sum(x*l)
+  #initialize weight matrix
+  w <- diag(l)
+  #cat("dim w = ", dim(w))
   
-  #fill in bottom right entry in matrix
-  I[2,2] <- -1 * sum(x^2 * l)
-  
-  #return matrix
-  I
+  #compute and return information
+  t(dm) %*% w %*% dm
 }
 ```
 
 ```{r}
-find_beta <- function(start_guess, x, y,
+#info <- function(beta, X, Z = NULL, data) 
+#U <- function(beta, X, Y, Z = NULL, data) 
+
+find_beta <- function(start_guess, x, y, z, data,
                       maxtol = 0.00001,
                       maxiter = 1000,
                       verbose = FALSE) {
@@ -79,7 +93,7 @@ find_beta <- function(start_guess, x, y,
   diff <- maxtol + 1
   iterations <- 0
   while(diff > maxtol & iterations <= maxiter){
-    beta_next <- beta_curr - solve(info(beta_curr, x, y)) %*% U(beta_curr, x, y)
+    beta_next <- beta_curr - solve(info(beta_curr, x, z, data)) %*% U(beta_curr, x, y, z, data)
     diff <- max(abs(beta_next[1] - beta_curr[1]), abs(beta_next[2] - beta_curr[2]))
     iterations <- iterations + 1
     beta_curr <- beta_next
@@ -108,7 +122,7 @@ x <- runif(100, min = 0, max = 1) #generate 100 rows from U(0,1)
 lambda <- exp(beta0 + beta1*x)
 y <- rpois(100, lambda)
 
-my_est <- round(find_beta(c(0,0), x, y)$estimates,2) 
+my_est <- round(find_beta(start_guess = c(0,0), x = x, y = y, z = NULL, data = data.frame(x,z))$estimates,2) 
 
 default_est <- round(glm(y ~ x, family = "poisson")$coefficients,2)
 
@@ -136,7 +150,6 @@ for(i in 1:1000){
   def <- c(default$coefficients[1], default$coefficients[2])
   sim <- cbind(sim, mine - def)
 }
-
 
 
 #slopes are a little over, intercepts are a little under. interesting
